# ZugSystem

./: .gitlab-ci.yml  CMakeLists.GoogleTest.cmake  CMakeLists.txt
src/prod/: Zugansage.cpp  Zugansage.h  main.cpp
src/test/: ZugansageTest.cpp  ZugansageTest.h
